# analise_diversas

./: .gitignore  pyproject.toml
.devcontainer/: devcontainer.json
analise_diversas/: dados.txt  interface.py  interface2.py  teste_rel.py  transform.py
analise_diversas/config/: config_transform.py
files/tratado/: 2024-07_tratado.parquet  2024-08_tratado.parquet  2024-09_tratado.parquet  2024-10_tratado.parquet  2024-11_tratado.parquet  2024-12_tratado.parquet  relatorio_tratado.csv
