[tool.poetry]
name = "analise-diversas"
version = "0.1.0"
description = ""
authors = ["Levi Serrano <lvserrano@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
streamlit = "^1.41.1"
numpy = "^2.2.2"
openpyxl = "^3.1.5"
tqdm = "^4.67.1"
plotly = "^5.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
